<resources>
    <string name="app_name">Tabatime</string>

    <string name="menu_open">메뉴 열림</string>
    <string name="menu_close">메뉴 닫힘</string>

    <!--sign-->
    <string name="kLogin">카카오로 간편 로그인</string>
    <!--sign-->

    <!--main-->
    <string name="login">로그인</string>
    <string name="menu_record">기록</string>
    <string name="menu_stat">통계</string>
    <string name="menu_setting">설정</string>

    <string name="exercise_time">운동시간</string>
    <string name="exercise_start">지금 운동을 시작하세요.</string>
    <string name="title_exercise">운동</string>
    <string name="title_rest">휴식</string>
    <string name="title_set">세트</string>
    <string name="title_round">라운드</string>
    <string name="title_round_reset">라운드 초기화</string>
    <string name="title_sound">사운드</string>
    <string name="sound_on">일반음</string>
    <string name="sound_off">음소거</string>
    <string name="round">%1$sX</string>
    <!--main-->

    <!--record-->
    <string name="btn_delete">삭제</string>
    <string name="delete_info">삭제할 기록을 선택하세요.</string>
    <string name="routine">해당 루틴으로 설정하시겠습니까?</string>
    <string name="delete">선택한 기록을 삭제할까요?</string>
    <!--record-->

    <!--stat-->
    <string name="user_now">회원님은 현재</string>
    <string name="lank">상위 %1$s</string>
    <string name="total_cnt">총 운동 횟수</string>
    <string name="total_time">총 운동 시간</string>
    <string name="no_stat">운동을 시작하여 랭킹에 도전해보세요.</string>
    <!--stat-->

    <!--setting-->
    <string name="set_sound">사운드 설정</string>
    <string name="set_sound_on">일반</string>
    <string name="exercise_pause">앱에서 나가면 운동 일시 정지</string>
    <string name="app_info">정보</string>
    <string name="version">현재버전</string>
    <string name="terms">약관 및 정책</string>
    <string name="app_id">계정</string>
    <string name="logout">로그아웃</string>
    <!--setting-->

    <!--exercise-->
    <string name="exercise_stop">앱에서 나가면 운동 일시 정지</string>
    <string name="total_num">&#160;/ %1$s</string>
    <string name="exercise_ready_title">준비</string>
    <string name="exercise_ready">운동 준비</string>
    <string name="exercising">운동</string>
    <string name="exercise_rest">휴식</string>
    <string name="skip">SKIP</string>
    <string name="remain">남은 시간 %1$s</string>
    <!--exercise-->

    <!--success-->
    <string name="congrats">축하합니다.</string>
    <string name="exercise_success">운동완료</string>
    <string name="today">오늘</string>
    <string name="finish">완료</string>
    <string name="go_home">홈으로 가기</string>
    <string name="go_home_info">‘홈으로 가기’ 선택시 기록은 저장되지 않습니다.</string>
    <string name="success_login">카카오 로그인하고 기록하기</string>
    <string name="error">오류가 발생하였습니다.</string>
    <string name="try_again">재시도</string>
    <string name="no_save">저장하지않고 나가기</string>
    <!--success-->

    <!--progress-->
    <string name="self">직접입력</string>
    <string name="desc_sec">초</string>
    <string name="desc_cnt">횟수</string>
    <!--progress-->

    <!--dialog-->
    <string name="apply">적용</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="dialog_title_time">시간을 입력하세요.</string>
    <string name="dialog_title_cnt">횟수를 입력하세요.</string>
    <string name="min">분</string>
    <string name="sec">초</string>
    <string name="cnt">회</string>
    <string name="time_limit">최소 5초 ~ 최대 3분까지 가능합니다.</string>
    <string name="cnt_limit">최소 1 ~ 최대 20회까지 가능합니다.</string>
    <!--dialog-->
</resources>