<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".activity.SuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:background="@drawable/layer_success">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/iv_trophy"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/nexon_lv_2_gothic"
                android:includeFontPadding="false"
                android:text="@string/congrats"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_trophy"
                android:layout_width="74dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_trophy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_trophy"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nexon_lv_2_gothic"
                android:includeFontPadding="false"
                android:text="@string/exercise_success"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/tv_exercise_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexon_lv_2_gothic"
                    android:text=""
                    android:textColor="@color/defalut_black"
                    android:textSize="12dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_exercise_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/nexon_lv_2_gothic"
                    android:text=""
                    android:textColor="@color/defalut_black"
                    android:textSize="12dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/layer_white_round"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nexon_lv_2_gothic"
                        android:includeFontPadding="false"
                        android:text="@string/title_exercise"
                        android:textColor="@color/defalut_black"
                        android:textSize="12dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv_exercise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/nexon_lv_2_gothic"
                        android:includeFontPadding="false"
                        android:text=""
                        android:textColor="@color/main"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/layer_white_round"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nexon_lv_2_gothic"
                        android:includeFontPadding="false"
                        android:text="@string/title_rest"
                        android:textColor="@color/defalut_black"
                        android:textSize="12dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv_rest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/nexon_lv_2_gothic"
                        android:includeFontPadding="false"
                        android:text=""
                        android:textColor="@color/pink"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/layer_white_round"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nexon_lv_2_gothic"
                        android:includeFontPadding="false"
                        android:text="@string/title_set"
                        android:textColor="@color/defalut_black"
                        android:textSize="12dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/nexon_lv_2_gothic"
                        android:includeFontPadding="false"
                        android:text=""
                        android:textColor="@color/light_gray"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:layout_width="16dp"
                    android:layout_height="match_parent" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/layer_white_round"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nexon_lv_2_gothic"
                        android:includeFontPadding="false"
                        android:text="@string/title_round"
                        android:textColor="@color/defalut_black"
                        android:textSize="12dp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv_round"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/nexon_lv_2_gothic"
                        android:includeFontPadding="false"
                        android:text=""
                        android:textColor="@color/color_sky_blue"
                        android:textSize="24dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/btn_success"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/layer_main_grdient">

            <TextView
                android:id="@+id/tv_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nexon_lv_2_gothic"
                android:includeFontPadding="false"
                android:text="@string/finish"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layer_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nexon_lv_2_gothic"
                android:includeFontPadding="false"
                android:text="@string/go_home"
                android:textColor="@color/defalut_black"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/nexon_lv_2_gothic"
                android:includeFontPadding="false"
                android:text="@string/go_home_info"
                android:textColor="@color/light_gray"
                android:textSize="12dp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>